--- a/style.css
+++ b/style.css
@@ -131,6 +131,7 @@ body {
 html {
   font-family: "Krona One", sans-serif;
   font-family: "Montserrat", sans-serif;
+  scroll-behavior: smooth;
 }
 
 Chrome,
@@ -185,6 +186,11 @@ li {
   color: var(--cortexto2);
 }
 
+a:visited {
+  color: inherit;
+  text-decoration: none;
+}
+
 .nav-bar {
   display: flex;
   position: fixed;
@@ -234,7 +240,7 @@ li {
 .home {
   display: flex;
   padding-bottom: 2rem;
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
   flex-direction: row;
   align-items: center;
@@ -343,7 +349,7 @@ a {
   background-color: var(--corbody2);
   display: flex;
   padding: 3rem;
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
   flex-direction: column;
   justify-content: center;
@@ -352,7 +358,7 @@ a {
 .container-projetos {
   padding: 3rem 0;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(245px, 1fr));
+  grid-template-rows: repeat(auto-fill, minmax(245px, 1fr));
   grid-gap: 3rem;
 }
 
@@ -361,25 +367,43 @@ a {
 }
 
 .projeto {
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
   border: black 1px solid;
-  overflow: hidden;
   border-radius: 0.5rem;
   padding: 1rem;
   height: 300px;
+  width: 60%;
   transition: transform 0.3s ease;
 }
 
-.projeto p {
-  opacity: 0;
-  margin-top: 1rem;
-  transform: translateY(1rem);
-  transition: opacity 0.6s ease, transform 1s ease;
+.projeto > h3 {
+  grid-row: 1/1;
+  grid-column: 1/1;
 }
 
-.projeto:hover p {
-  opacity: 1;
-  transform: translateY(-10px);
-  transition: opacity 0.6s ease, transform 1s ease;
+.projeto p {
+  grid-row: 2/4;
+  grid-column: 1/1;
+  margin-top: 1rem;
+}
+
+.projeto > .tecnologias {
+  grid-row: 4/5;
+  grid-column: 1/1;
+}
+
+.projeto > .navegacao {
+  grid-row: 5/6;
+  grid-column: 1/3;
+}
+
+.projeto > img {
+  width: 100%;
+  height: 100%;
+  grid-row: 1/5;
+  grid-column: 2/3;
 }
 
 footer {
@@ -406,4 +430,15 @@ footer p {
   width: 2rem;
   height: 2rem;
   transition: all 0.3s ease;
+}
+
+.container {
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
+}
+
+.item1 {
+  grid-row-start: 1;
+  grid-row-end: 3;
 }
