--- a/style.css
+++ b/style.css
@@ -148,7 +148,7 @@ input[type="number"] {
 }
 
 :root {
-  --corbody: #ededed;
+  --corbody: ghostwhite;
   --corbody2: #a7a7a793;
   --cornav: #000000;
   --cortexto1: #da0037;
@@ -348,7 +348,7 @@ a {
 .projetos {
   background-color: var(--corbody2);
   display: flex;
-  padding: 3rem;
+  padding: 5rem 3rem 3rem;
   min-height: 100vh;
   width: 100%;
   flex-direction: column;
@@ -358,8 +358,8 @@ a {
 .container-projetos {
   padding: 3rem 0;
   display: grid;
-  grid-template-rows: repeat(auto-fill, minmax(245px, 1fr));
   grid-gap: 3rem;
+  justify-items: center;
 }
 
 .container-projetos > :hover {
@@ -367,14 +367,16 @@ a {
 }
 
 .projeto {
+  background-color: var(--corbody);
   display: grid;
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
-  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 0.5fr 2fr 2fr 1fr 1fr;
+  grid-template-columns: 0.65fr 1.5fr;
+  grid-gap: 1rem;
   border: black 1px solid;
   border-radius: 0.5rem;
-  padding: 1rem;
-  height: 300px;
-  width: 60%;
+  padding: 1.5rem;
+  height: 28rem;
+  width: 56rem;
   transition: transform 0.3s ease;
 }
 
@@ -386,7 +388,6 @@ a {
 .projeto p {
   grid-row: 2/4;
   grid-column: 1/1;
-  margin-top: 1rem;
 }
 
 .projeto > .tecnologias {
@@ -394,9 +395,38 @@ a {
   grid-column: 1/1;
 }
 
+.projeto > .tecnologias img {
+  height: 100%;
+  width: 2.25rem;
+}
+
 .projeto > .navegacao {
   grid-row: 5/6;
   grid-column: 1/3;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
+.projeto > .navegacao > a {
+  background-color: var(--cornav);
+  color: var(--cortexto1);
+  font-weight: bolder;
+  width: 30%;
+  height: 100%;
+  border-radius: 0.5rem;
+  border: 1px black solid;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: transform 0.3s ease;
+}
+
+.projeto > .navegacao > a:hover {
+  transition: transform 0.3s ease;
+  transform: scale(1.05);
 }
 
 .projeto > img {
@@ -423,7 +453,7 @@ footer p {
 .tecnologias {
   display: flex;
   flex-direction: row;
-  gap: 1rem;
+  gap: 0.25rem;
 }
 
 .tecnologias > img {
