--- a/style.css
+++ b/style.css
@@ -1,127 +1,3 @@
-/*html {
-  font-family: "IBM Plex Sans", sans-serif;
-}
-
-Chrome, Safari, Edge, Opera 
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
-
-input[type="number"] {
-  -moz-appearance: textfield;
-}
-
-body {
-  display: flex;
-  flex-direction: column;
-
-  width: 90%;
-  margin: 0 auto;
-}
-
-.intro {
-  min-height: 100vh;
-  max-height: 100vh;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  align-content: center;
-  align-items: center;
-  justify-content: center;
-  padding: 0 3rem 2rem;
-}
-
-.container {
-  display: flex;
-  flex-direction: row;
-  gap: 2rem;
-}
-
-.nome,
-.sobre {
-  flex: 0 0 50%;
-}
-
-.nome {
-  justify-content: center;
-}
-
-.nome > h1 {
-  font-size: 5rem;
-}
-
-.container > a > svg {
-  width: 5rem;
-  height: 5rem;
-
-  transition: transform 0.5s ease, filter 0.5s ease;
-}
-
-.container > a > svg:hover {
-  filter: brightness(0.9);
-  transform: scale(1.3);
-  color: rgb(14, 145, 140);
-  transition: all 0.3s ease 0s;
-}
-
-.sobre {
-  margin-top: 2rem 0;
-  gap: 1.5rem;
-}
-
-.sobre > h2 {
-  width: 100%;
-}
-
-.sobre > img {
-  width: 5rem;
-  height: 5rem;
-  transition: transform 0.5s ease, filter 0.5s ease;
-}
-
-.sobre > img:hover {
-  filter: brightness(0.9);
-  transform: scale(1.05);
-  transition: transform 0.5s ease, filter 0.5s ease;
-}
-
-.projetos {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(245px, 1fr));
-  grid-gap: 3rem;
-  margin: 2rem 0;
-  padding: 0;
-}
-
-.projetos > :hover {
-  transform: scale(1.05);
-}
-
-.projeto {
-  border: black 1px solid;
-  overflow: hidden;
-  border-radius: 0.5rem;
-  padding: 1rem;
-  height: 300px;
-
-  transition: transform 0.3s ease;
-}
-
-.projeto p {
-  opacity: 0;
-  transform: translateY(10px);
-  transition: opacity 0.6s ease, transform 1s ease;
-}
-
-.projeto:hover p {
-  opacity: 1;
-  transform: translateY(-10px);
-  transition: opacity 0.6s ease, transform 1s ease;
-}
-*/
-
 * {
   padding: 0;
   margin: 0;
@@ -194,15 +70,13 @@ a:visited {
 .nav-bar {
   display: flex;
   position: fixed;
-  padding: 2rem 3rem;
+  padding: 0 3rem;
   width: 100%;
-  height: 3rem;
-  top: 0;
+  height: 4rem;
   align-items: center;
   justify-content: space-between;
   background: var(--cornav);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.2);
-  text-align: center;
   z-index: 1;
 }
 
@@ -239,12 +113,8 @@ a:visited {
 
 .home {
   display: flex;
-  padding-bottom: 2rem;
   min-height: 100vh;
-  width: 100%;
-  flex-direction: row;
   align-items: center;
-  justify-content: center;
 }
 
 .home > div {
@@ -260,13 +130,12 @@ a {
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  align-content: center;
-  flex-wrap: wrap;
 }
 
 .intro {
   display: flex;
   flex-direction: column;
+  width: 100%;
   gap: 1rem;
 }
 
@@ -274,8 +143,6 @@ a {
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  align-content: center;
-  flex-wrap: wrap;
 }
 
 .contato {
@@ -332,11 +199,11 @@ a {
   display: flex;
   flex-direction: row;
   gap: 1rem;
+  height: 4rem;
 }
 
 .stack > img {
-  width: 4rem;
-  height: 4rem;
+  height: 100%;
   transition: all 0.3s ease;
 }
 
@@ -471,4 +338,67 @@ footer p {
 .item1 {
   grid-row-start: 1;
   grid-row-end: 3;
+}
+
+@media screen and (max-width: 1060px) {
+  .nav-bar {
+    display: flex;
+    position: fixed;
+    width: 100%;
+    height: 5rem;
+    justify-content: space-around;
+    background: var(--cornav);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    align-content: stretch;
+  }
+  .home {
+    display: flex;
+    padding: 5rem 0 2rem;
+
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .home-l {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    gap: 2rem;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: flex-start;
+  }
+
+  .home-r {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    gap: 2rem;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: flex-start;
+  }
+
+  .stack > img {
+    width: 50%; /* Ou qualquer valor desejado */
+    height: auto;
+  }
+
+  .projeto {
+    background-color: var(--corbody);
+    display: grid;
+    grid-template-rows: 0.5fr 2fr 2fr 1fr 1fr;
+    grid-template-columns: 0.65fr 1.5fr;
+    grid-gap: 1rem;
+    border: black 1px solid;
+    border-radius: 0.5rem;
+    padding: 1.5rem;
+    height: 100%;
+    width: 100%;
+    transition: transform 0.3s ease;
+  }
 }
