--- a/style.css
+++ b/style.css
@@ -115,6 +115,7 @@ a:visited {
   display: flex;
   min-height: 100vh;
   align-items: center;
+  gap: 1rem;
 }
 
 .home > div {
@@ -147,12 +148,13 @@ a {
 
 .contato {
   display: flex;
-  gap: 1rem;
+  height: 4rem;
+  gap: 0.5rem;
 }
 
 .contato > a > img {
-  width: 4rem;
-  height: 4rem;
+  height: 100%;
+  max-height: 4rem;
   transition: all 0.3s ease;
 }
 
@@ -197,13 +199,13 @@ a {
 
 .stack {
   display: flex;
-  flex-direction: row;
-  gap: 1rem;
   height: 4rem;
+  gap: 0.5rem;
 }
 
 .stack > img {
   height: 100%;
+  max-height: 4rem;
   transition: all 0.3s ease;
 }
 
@@ -341,6 +343,10 @@ footer p {
 }
 
 @media screen and (max-width: 1060px) {
+  h1 {
+    font-size: 2.5rem;
+  }
+
   .nav-bar {
     display: flex;
     position: fixed;
@@ -358,7 +364,6 @@ footer p {
   .home {
     display: flex;
     padding: 5rem 0 2rem;
-
     flex-direction: column;
     align-items: flex-start;
   }
@@ -373,6 +378,11 @@ footer p {
     align-content: flex-start;
   }
 
+  .contato > a > img {
+    width: 100%;
+    height: 100%;
+  }
+
   .home-r {
     display: flex;
     width: 100%;
@@ -384,8 +394,8 @@ footer p {
   }
 
   .stack > img {
-    width: 50%; /* Ou qualquer valor desejado */
-    height: auto;
+    width: 100%;
+    height: 100%;
   }
 
   .projeto {
