--- a/style.css
+++ b/style.css
@@ -140,12 +140,6 @@ a {
   gap: 1rem;
 }
 
-.home-r {
-  display: flex;
-  flex-direction: column;
-  gap: 2rem;
-}
-
 .contato {
   display: flex;
   height: 4rem;
@@ -189,9 +183,16 @@ a {
   visibility: visible;
 }
 
+.home-r {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
 .perfil,
 .perfil > * {
   list-style: none;
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -203,13 +204,13 @@ a {
   gap: 0.5rem;
 }
 
-.stack > img {
+.stack > a > img {
   height: 100%;
   max-height: 4rem;
   transition: all 0.3s ease;
 }
 
-.stack > img:hover {
+.stack > a > img:hover {
   transform: scale(1.05);
   transition: all 0.3s ease;
 }
@@ -323,23 +324,13 @@ footer p {
   display: flex;
   flex-direction: row;
   gap: 0.25rem;
+  justify-content: center;
 }
 
 .tecnologias > img {
   width: 2rem;
   height: 2rem;
   transition: all 0.3s ease;
-}
-
-.container {
-  display: grid;
-  grid-template-rows: 1fr 1fr;
-  grid-template-columns: 1fr 1fr;
-}
-
-.item1 {
-  grid-row-start: 1;
-  grid-row-end: 3;
 }
 
 @media screen and (max-width: 1060px) {
@@ -393,7 +384,7 @@ footer p {
     align-content: flex-start;
   }
 
-  .stack > img {
+  .stack > a > img {
     width: 100%;
     height: 100%;
   }
@@ -402,7 +393,7 @@ footer p {
     background-color: var(--corbody);
     display: grid;
     grid-template-rows: 0.5fr 2fr 2fr 1fr 1fr;
-    grid-template-columns: 0.65fr 1.5fr;
+    grid-template-columns: 1fr;
     grid-gap: 1rem;
     border: black 1px solid;
     border-radius: 0.5rem;
@@ -410,5 +401,45 @@ footer p {
     height: 100%;
     width: 100%;
     transition: transform 0.3s ease;
+  }
+}
+
+@media screen and (max-width: 769px) {
+  .projeto {
+    background-color: var(--corbody);
+    display: grid;
+    grid-template-rows: 0.5fr 1fr 0.75fr 0.5fr;
+    grid-template-columns: 1fr;
+    grid-gap: 1rem 0;
+    border: black 1px solid;
+    border-radius: 0.5rem;
+    padding: 1.5rem;
+    height: 100%;
+    width: 100%;
+    transition: transform 0.3s ease;
+  }
+
+  .projeto > img {
+    display: none;
+  }
+
+  .projeto > h3 {
+    grid-row: 1/2;
+    grid-column: 1/1;
+  }
+
+  .projeto p {
+    grid-row: 2/3;
+    grid-column: 1/1;
+  }
+
+  .projeto > .tecnologias {
+    grid-row: 3/4;
+    grid-column: 1/1;
+  }
+
+  .projeto > .navegacao {
+    grid-row: 4/5;
+    grid-column: 1/1;
   }
 }
