--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ input[type="number"] {
 body {
   background: var(--corbody);
   display: flex;
+  width: 100%;
   flex-direction: column;
 }
 
@@ -338,6 +339,10 @@ footer p {
     font-size: 2.5rem;
   }
 
+  .projeto > img {
+    display: none;
+  }
+
   .nav-bar {
     display: flex;
     position: fixed;
@@ -404,7 +409,7 @@ footer p {
   }
 }
 
-@media screen and (max-width: 769px) {
+@media screen and (max-width: 1060px) {
   .projeto {
     background-color: var(--corbody);
     display: grid;
@@ -414,7 +419,7 @@ footer p {
     border: black 1px solid;
     border-radius: 0.5rem;
     padding: 1.5rem;
-    height: 100%;
+    max-height: 30rem;
     width: 100%;
     transition: transform 0.3s ease;
   }
@@ -441,5 +446,49 @@ footer p {
   .projeto > .navegacao {
     grid-row: 4/5;
     grid-column: 1/1;
+  }
+}
+
+@media screen and (max-width: 280px) {
+  h1 {
+    font-size: 1.5rem;
+  }
+
+  h2 {
+    font-size: 1.25rem;
+  }
+
+  h3 {
+    font-size: 0.9rem;
+  }
+
+  p {
+    font-size: 0.9rem;
+  }
+
+  .projetos {
+    background-color: var(--corbody2);
+    display: flex;
+    padding: 5rem 3rem 3rem;
+    min-height: 100vh;
+    width: 100%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  body > footer > p {
+    font-size: 0.75rem;
+  }
+}
+
+@media only screen and (-webkit-min-device-pixel-ratio: 1.5),
+  only screen and (-o-min-device-pixel-ratio: 3/2),
+  only screen and (min--moz-device-pixel-ratio: 1.5),
+  only screen and (min-device-pixel-ratio: 1.5) {
+  html,
+  body {
+    width: 100%;
+    overflow-x: hidden;
   }
 }
